@@ -1,7 +1,7 @@
 --extra-index-url https://pypi.anaconda.org/OpenEye/simple
 OpenEye-toolkits == 2020.2.0
 mmcif >= 0.61
-rcsb.utils.io >= 0.99
+rcsb.utils.io >= 1.01
 rcsb.utils.multiproc >= 0.18
 rcsb.utils.chem >= 0.65
 rcsb.utils.chemref >= 0.66
